[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/fireball.png" type="Texture" id=1]
[ext_resource path="res://Font/slkscrb.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/LeftButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/LeftButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Button.png" type="Texture" id=5]
[ext_resource path="res://Assets/ButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/ButtonSelected.png" type="Texture" id=7]
[ext_resource path="res://Shop.gd" type="Script" id=8]
[ext_resource path="res://Font/slkscre.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[node name="Shop" type="Node2D"]
script = ExtResource( 8 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 235.969, 408.53 )
scale = Vector2( 15.0466, 15.0466 )
texture = ExtResource( 1 )

[node name="ItemInfo" type="VBoxContainer" parent="."]
margin_left = 79.9789
margin_top = 243.925
margin_right = 389.979
margin_bottom = 495.925
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ItemInfo"]
margin_right = 310.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "Fireball"
align = 1

[node name="Price" type="Label" parent="ItemInfo"]
margin_top = 31.0
margin_right = 310.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "$3000"
align = 1

[node name="Spacecoin" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 9.52269
margin_right = 168.0
margin_bottom = 31.5227
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="Spacecoin"]
margin_right = 369.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "There was an Error"

[node name="LeftButton" type="TextureButton" parent="."]
margin_left = 45.1899
margin_top = 375.789
margin_right = 109.19
margin_bottom = 439.789
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 431.682
margin_top = 440.007
margin_right = 495.682
margin_bottom = 504.007
rect_rotation = 180.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseButton" type="TextureButton" parent="."]
margin_left = 131.853
margin_top = 541.666
margin_right = 339.853
margin_bottom = 581.666
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Purchase" type="Label" parent="PurchaseButton"]
margin_right = 206.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Purchase"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 9.62311
margin_top = 748.029
margin_right = 217.623
margin_bottom = 788.029
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReturnToHangar" type="Label" parent="BackButton"]
margin_right = 206.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Hangar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouDontHave" type="Label" parent="."]
visible = false
margin_left = 51.0
margin_top = 90.0
margin_right = 424.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
text = "You don't have enough spacecoin!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_up" from="RightButton" to="." method="_on_RightButton_button_up"]
[connection signal="button_up" from="PurchaseButton" to="." method="_on_PurchaseButton_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
